Fix the navbar from wrapping on small screens

--- a/themes/mongodb-tutorials/src/styles/bem-components/navbar-download.scss
+++ b/themes/mongodb-tutorials/src/styles/bem-components/navbar-download.scss
@@ -3,7 +3,6 @@
 .navbar-download {
   align-items: center;
   display: inline-flex;
-  margin-right: 40px;
 
   &__text {
     color: $green-primary;
