--- a/themes/mongodb-tutorials/src/styles/bem-components/navbar-links.scss
+++ b/themes/mongodb-tutorials/src/styles/bem-components/navbar-links.scss
@@ -3,7 +3,6 @@
 .navbar-links {
   display: inline-block;
   margin: 0 40px;
-  overflow: hidden;
 
   &__item {
     color: $black-primary;
